# jirascope

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  PERF.md  README.md  build-release.sh
jirascope/: jirascope-dyn-get.el  jirascope.el
jirascope-cli/: Cargo.toml
jirascope-cli/src/: main.rs
jirascope-core/: Cargo.toml
jirascope-core/src/: auth.rs  error.rs  lib.rs  utils.rs
jirascope-core/src/jira/: doc.rs  issue.rs  mod.rs
jirascope-dyn/: Cargo.toml
jirascope-dyn/src/: benchmark.rs  concurrent.rs  issue.rs  lib.rs  project.rs  state.rs  test_server.rs  utils.rs
jirascope-test-server/: Cargo.toml
jirascope-test-server/src/: main.rs
jiroscope/: Cargo.toml  jiroscope-dyn-get.el  jiroscope.el
jiroscope-cli/: Cargo.toml
jiroscope-cli/src/: main.rs
jiroscope-core/: Cargo.toml
jiroscope-core/src/: auth.rs  config.rs  error.rs  lib.rs  utils.rs
jiroscope-core/src/jira/: doc.rs  error.rs  issue.rs  mod.rs  project.rs  user.rs
jiroscope-dyn/: Cargo.toml
jiroscope-dyn/src/: concurrent.rs  issue.rs  lib.rs  project.rs  state.rs  test_server.rs  utils.rs
jiroscope-test-server/: Cargo.toml
jiroscope/src/: benchmark.rs  lib.rs  utils.rs
tests/: common.sh  issue-create-delete.sh  issue-create-delete.spec  project-create-delete.sh  project-create-delete.spec  test.sh
