[package]
name = "jiroscope"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
test_server = ["jiroscope-core/test_server"]

[dependencies]
emacs = "0.18.0"
jiroscope-core = { path = "../jiroscope-core" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
